--- a/AppProductService-dev.yml
+++ b/AppProductService-dev.yml
@@ -10,6 +10,11 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/product_service?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
   jpa:
     show-sql: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 env:
   dev
 test:
