--- a/AppOrderService-dev.yml
+++ b/AppOrderService-dev.yml
@@ -10,5 +10,10 @@ spring:
     username: master
     password: hnytyhy682374
     url: jdbc:mysql://127.0.0.1:3306/order_service?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 env:
   dev
