--- a/AppProductService-dev.yml
+++ b/AppProductService-dev.yml
@@ -15,7 +15,8 @@ spring:
     port: 5672
     username: guest
     password: guest
+  redis:
+    host: localhost
+    port: 6379
 env:
   dev
-test:
-  a
