--- a/APIGateway-dev.yml
+++ b/APIGateway-dev.yml
@@ -8,3 +8,25 @@ zuul:
     AppProductService: /myProduct/**
   ignored-patterns:
     - /**/msg
+  ratelimit:
+    # 开启限流
+    enabled: true
+    # 存储方式
+    repository: REDIS
+    # 限流策略
+    policies:
+      # 指定限流服务
+      APPPRODUCTSERVICE:
+        # 每个周期内请求次数
+        limit: 3
+        # 单位时间内允许访问的总时间
+        quota: 30
+        # 周期时间
+        refresh-interval: 60
+        # 限流方式 USER 根据用户；ORIGIN 原始请求；URL 请求地址；
+        type: ORIGIN
+      APPORDERSERVICE:
+        limit: 3
+        quota: 30
+        refresh-interval: 60
+        type: ORIGIN
