--- a/APIGateway-dev.yml
+++ b/APIGateway-dev.yml
@@ -30,4 +30,10 @@ zuul:
         - limit: 10 #optional - request number limit per refresh interval window
           quota: 1000 #optional - request time limit per refresh interval window (in seconds)
           refresh-interval: 60 #default value (in seconds)
-          
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 3500
