--- a/APIGateway-dev.yml
+++ b/APIGateway-dev.yml
@@ -32,8 +32,15 @@ zuul:
           refresh-interval: 60 #default value (in seconds)
 hystrix:
   command:
+    # 设置默认的配置
     default:
       execution:
         isolation:
           thread:
             timeoutInMilliseconds: 3500
+    # 为某个特定的方法设置配置，将覆盖默认值
+    getProductInfoList:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 1000
